my-apps/development/kestra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kestra
  labels:
    app.kubernetes.io/name: kestra
